--- a/index.html
+++ b/index.html
@@ -7,43 +7,44 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Guiminamflix</title>
+    <title>Corcioliflix</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>CORCIOLIFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>DEADPOOL E WOLVERINE</h1>
+            <p>#dupla dinâmica</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/dEbe0rS4Z2A?si=sof6PLqXz55bXxf3" 
+             title="YouTube video player" frameborder="0" 
+             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+             referrerpolicy="strict-origin-when-cross-origin" 
+             allowfullscreen></iframe>
         </div>
     </section>
 
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://youtu.be/Dy4MMEuXYKg?si=EmuESiF_1Q34KWer">
+                <img src="hhttps://img.youtube.com/vi/Dy4MMEuXYKg/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://youtu.be/dGtn36Vf0uQ?si=6fe7XZj5IKssNB03">
+                <img src="https://img.youtube.com/vi/dGtn36Vf0uQ/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://youtu.be/u2x6ta5sm_U?si=e5n5bMpzqSIjn95N">
+                <img src="https://img.youtube.com/vi/u2x6ta5sm_U/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://youtu.be/F6uO6qJFN2U?si=zEoV_EeXIoRO45tW">
+                <img src="https://img.youtube.com/vi/F6uO6qJFN2U/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://youtu.be/Tg8JR-BtrH8?si=PkLVIhM9ZnzAN0aA">
+                <img src="https://img.youtube.com/vi/Tg8JR-BtrH8/maxresdefault.jpg" />
             </a>
         </div>
     </section>
