--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://youtu.be/uo93a_P15IQ?si=FxqHmAN8lUtqdQB5">
-                <img src="https://img.youtube.com/vi/uo93a_P15IQ/maxresdefault.jpg" />
+            <a href="https://youtu.be/0xDXEG6mK0o?si=1HSnJaPnR4lRyS9r">
+                <img src="https://img.youtube.com/vi/0xDXEG6mK0o/maxresdefault.jpg" />
             </a>
             <a href="https://youtu.be/dGtn36Vf0uQ?si=6fe7XZj5IKssNB03">
                 <img src="https://img.youtube.com/vi/dGtn36Vf0uQ/maxresdefault.jpg" />
